--- a/public/css/main.css
+++ b/public/css/main.css
@@ -48,7 +48,7 @@ label {
 input {
     padding: 10px 20px;
     box-sizing: border-box;
-    background: #eee;
+    background: #1B2431;
     border: 0;
     display: block;
     width: 100%;
